--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "nien-luan-co-so-cntt",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon -inspect index.js",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20" 
+    "nodemon": "^2.0.20"
   }
 }
